tests/scan/fixtures/validation/negative/clean_rubygems_clean_logger_gem/clean_logger_gem.gemspec
Gem::Specification.new do |s|
  s.name = "clean_logger_gem"
  s.version = "0.1.0"
  s.summary = "A clean Ruby gem: clean_logger_gem"
  s.authors = ["Example Author"]
end
